Fix remiscan-logo alignment

--- a/pages/global-style.css
+++ b/pages/global-style.css
@@ -497,6 +497,7 @@ footer.off {
 
 remiscan-logo {
   --width: 4.8rem;
+  margin-inline: calc(-0.033 * var(--width));
 }
 
 html:not(.actif) footer {
